extends Control

var selected_stage : String = ""  # Inicializa como string vazia

func _ready():
	# Inicializa a label do cen√°rio
	if has_node("nome_cenario"):
		$nome_cenario.text = "Nenhum cen√°rio selecionado"

	# Conecta os bot√µes de cen√°rio
	for button in $MarginContainer/GridContainer.get_children():
		if button is Button:
			button.pressed.connect(Callable(self, "_on_stage_button_pressed").bind(button))

	# Conecta bot√£o RETORNAR
	if has_node("RETORNAR"):
		$RETORNAR.pressed.connect(_on_return_pressed)
	else:
		push_error("‚ùå Bot√£o 'RETORNAR' n√£o encontrado na cena!")

	# Conecta bot√£o LUTA
	if has_node("LUTA"):
		$LUTA.pressed.connect(_on_confirm_pressed)
	else:
		push_error("‚ùå Bot√£o 'LUTA' n√£o encontrado na cena!")


# Quando o jogador clica em um cen√°rio
func _on_stage_button_pressed(button: Button):
	selected_stage = button.name
	# Dicion√°rio com nomes amig√°veis
	var nomes_map = {
		"btn_laboratorio": "Laborat√≥rio",
		"btn_biblioteca": "Biblioteca",
		"btn_cantina": "Cantina",
		"btn_quadra": "Quadra",
		"btn_predio_e": "Pr√©dio E",
		"btn_predio_a": "Pr√©dio A",
		"btn_campus_unifeob": "Campus Unifeob",
		"btn_estacionamento": "Estacionamento"
	}
	var nome_formatado = nomes_map.get(button.name, button.name.trim_prefix("btn_").replace("_", " ").capitalize())
	
	# Verifica e atualiza a label
	if has_node("nome_cenario"):
		var label = $nome_cenario
		label.text = nome_formatado
		print("‚úÖ Clicou no cen√°rio:", nome_formatado)
	else:
		push_error("‚ùå Label 'nome_cenario' N√ÉO ENCONTRADA ao tentar atualizar!")
	
	print("üîç Nome do bot√£o:", button.name)  # Debug adicional

# Quando clica em LUTA
func _on_confirm_pressed():
	if selected_stage != "":
		print("üéÆ Cen√°rio confirmado:", selected_stage)
		match selected_stage:
			"btn_biblioteca": get_tree().change_scene_to_file("res://stages/biblioteca.tscn")
			"btn_cantina": get_tree().change_scene_to_file("res://stages/cantina.tscn")
			"btn_laboratorio": get_tree().change_scene_to_file("res://stages/laboratorio.tscn")
			"btn_quadra": get_tree().change_scene_to_file("res://stages/quadra.tscn")
			"btn_predio_e": get_tree().change_scene_to_file("res://stages/predio_e.tscn")
			"btn_predio_a": get_tree().change_scene_to_file("res://stages/predio_a.tscn")
			"btn_campus_unifeob": get_tree().change_scene_to_file("res://stages/campus.tscn")
			"btn_estacionamento": get_tree().change_scene_to_file("res://stages/estacionamento.tscn")
			_: push_warning("‚ö†Ô∏è Cena n√£o configurada para esse bot√£o.")
	else:
		if has_node("nome_cenario"):
			$nome_cenario.text = "Selecione um cen√°rio!"
		print("‚ùå Nenhum cen√°rio selecionado.")


# Quando clica em RETORNAR
func _on_return_pressed():
	print("‚Ü©Ô∏è Retornando √† sele√ß√£o de personagem...")
	get_tree().change_scene_to_file("res://character_select/character_select.tscn")
